Link Miir::MLIRMIOpen to MIOpen instead of MIOpenDriver
This aligns with the old `find_library(LIBMLIRMIOPEN)` method, which
sets the variable `LIBMLIRMIOPEN` if the mlirmiopen static library is
found. And if so, link MIOpen to LIBMLIRMIOPEN.
Later MIOpen is linked to MIOpenDriver, which is further linked to
other targets, such as fin.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -687,8 +687,8 @@ if(miopentensile_FOUND)
     target_link_libraries(MIOpen PRIVATE MIOpenTensile)
 endif()
 
-if(LIBMLIRMIOPEN)
-  target_link_libraries(MIOpen PRIVATE ${LIBMLIRMIOPEN})
+if(MIOPEN_USE_MLIR)
+  target_link_libraries(MIOpen PRIVATE Miir::MLIRMIOpen)
 endif()
 
 if(WIN32 AND NOT MSVC)
