workaround tydy check as TODO items

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -700,6 +700,20 @@ enable_cppcheck(
         variableScope
         missingReturn
         cstyleCast
+        unknownMacro
+        uselessCallsSubstr
+        uninitMemberVar
+        overlappingWriteUnion
+        operatorEqVarError
+        returnTempReference
+        objectIndex
+        integerOverflowCond
+        rethrowNoCurrentException
+        mismatchingContainers
+        unreadVariable
+        CastIntegerToAddressAtReturn
+        knownConditionTrueFalse
+        shadowFunction
     FORCE
     SOURCES
         addkernels/
