[Find2.0] Fix support for INT8 (#1828)

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -191,7 +191,7 @@ if(NOT MIOPEN_TEST_MIOTENSILE)
 	elseif(MIOPEN_TEST_INT8)
 	    set(SKIP_ALL_EXCEPT_TESTS
                 test_tensor_vec test_tensor_cast test_tensor_trans test_tensor_copy test_tensor_set
-                test_tensor_transform test_conv2d)
+                test_tensor_transform test_conv2d test_conv2d_find2)
 	elseif(MIOPEN_TEST_BFLOAT16)
 	    set(SKIP_ALL_EXCEPT_TESTS
                 test_conv2d test_tensor_copy test_tensor_set test_tensor_vec test_immed_conv2d
