Step 6: fix some C++20 issues

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,7 +100,7 @@ endif()
 
 
 ############################################################
-# require C++14 prefer C++20
+# require c++20 prefer C++20
 add_compile_options(-std=c++20)
 
 ############################################################
